add errors div to form, setup index/show/new views

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,1 +1,6 @@
-<h1>Index page</h1>
+<% @movies.each do |movie| %>
+  <h1><%= link_to movie.title, movie %></h1>
+  <div>
+    <%= truncate(movie.description, length: 45) %>
+  </div>
+<% end %>
