add gem Bootstrap-sass, setup view styling

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -4,3 +4,8 @@
     <%= truncate(movie.description, length: 45) %>
   </div>
 <% end %>
+
+<br>
+<div class="">
+  <%= link_to "New Movie", new_movie_path, class: "btn btn-success" %>
+</div>
