add gem Devise, setup & configure

--- a/app/views/movies/edit.html.erb
+++ b/app/views/movies/edit.html.erb
@@ -4,5 +4,5 @@
 
 <br>
 <div>
-  <%= link_to "Back", movie_path(@movie), class: 'btn btn-default' %>
+  <%= link_to "Back", :back, class: 'btn btn-default' %>
 </div>
