--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -1,4 +1,5 @@
 <%= simple_form_for @movie do |f| %>
+
   <% if @movie.errors.any? %>
     <div id="errors">
       <p>
@@ -15,18 +16,25 @@
   <div class="form-group">
     <%= f.input :title, input_html: { class: 'form-control' } %>
   </div>
+
   <div class="form-group">
     <%= f.input :description, input_html: { class: 'form-control' } %>
   </div>
+
   <div class="form-group">
     <%= f.input :director, input_html: { class: 'form-control' } %>
   </div>
+
   <div class="form-group">
     <%= f.input :movie_length, input_html: { class: 'form-control' } %>
   </div>
+
   <div class="form-group">
     <%= f.input :rating, input_html: { class: 'form-control' } %>
   </div>
 
-  <%= f.button :submit, class: 'btn btn-primary' %>
+  <div class="form-actions">
+    <%= f.button :submit, class: 'btn btn-primary' %>
+  </div>
+
 <% end %>
